{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 500,
  "lineage": "70a542b1-85d9-3a13-74e7-0d34bb61d3c0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:internet-gateway/igw-0efce6b2f8d8c27a5",
            "id": "igw-0efce6b2f8d8c27a5",
            "owner_id": "527873020686",
            "vpc_id": "vpc-0517c41e76e45e108"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0efce6b2f8d8c27a5",
            "id": "r-rtb-09d7482094bde3d901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d7482094bde3d90",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:route-table/rtb-09d7482094bde3d90",
            "id": "rtb-09d7482094bde3d90",
            "owner_id": "527873020686",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efce6b2f8d8c27a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0517c41e76e45e108"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04603512aafe0763e",
            "route_table_id": "rtb-09d7482094bde3d90",
            "subnet_id": "subnet-0f0496296465dc4dc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06632149c9c8995e9",
            "route_table_id": "rtb-09d7482094bde3d90",
            "subnet_id": "subnet-0c865c97ecfa24169"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:security-group/sg-06a758a74363fa813",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a758a74363fa813",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210813091839061100000001",
            "name_prefix": "terraform-",
            "owner_id": "527873020686",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0517c41e76e45e108"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:subnet/subnet-0f0496296465dc4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/24",
            "id": "subnet-0f0496296465dc4dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "527873020686",
            "tags": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0517c41e76e45e108"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:subnet/subnet-0c865c97ecfa24169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0c865c97ecfa24169",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "527873020686",
            "tags": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/harshad": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0517c41e76e45e108"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ram"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ram",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:527873020686:vpc/vpc-0517c41e76e45e108",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-098569188704b6728",
            "default_route_table_id": "rtb-0d3a720e774d4768b",
            "default_security_group_id": "sg-094d01ffb44907215",
            "dhcp_options_id": "dopt-941faaff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0517c41e76e45e108",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3a720e774d4768b",
            "owner_id": "527873020686"
          }
        }
      ]
    }
  ]
}